--- a/src/scss/sections/guests.scss
+++ b/src/scss/sections/guests.scss
@@ -85,18 +85,14 @@
 
     &__guests-list {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: flex-start;
-        align-content: space-between;
-        max-height: 200px;
-        max-width: 696px;
         padding: 0;
+        gap: 11px 30px;
     }
 
-    &__guests-item:not(:nth-child(4n)) {
-        margin-bottom: 11px;
+    &__guests-item {
+        width: 160px;
     }
 
     &__guest-link {
@@ -122,9 +118,8 @@
     &__guest-image {
         display: inline-flex;
         max-width: 350px;
-        max-height: 220px;
+        min-height: 220px;
         width: 100%;
-        height: 100%;
         margin-bottom: 13px;
         background: transparent no-repeat right center / 350px 220px;
         background-image: url("../../img/guests__guest-card-image-mock.png");
@@ -138,13 +133,12 @@
     &__socials-list {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        max-width: 132px;
+        flex-wrap: wrap;
         margin-bottom: 13px;
+        gap: 30px;
     }
 
     &__socials-item {
-        height: 100%;
         width: 24px;
     }
 
@@ -193,6 +187,7 @@
     &__guest-air-link {
         display: inline-flex;
         align-self: start;
+        max-width: 162px;
         padding: 10px 18.5px;
         border: 2px solid $primary-light;
         border-radius: 77px;
