--- a/src/scss/sections/hero.scss
+++ b/src/scss/sections/hero.scss
@@ -66,6 +66,7 @@
     }
 
     &__content-button {
+        max-width: 245px;
         padding: 25px 54px;
         border-radius: 40px;
         color: $white;
