--- a/src/scss/sections/podcasts.scss
+++ b/src/scss/sections/podcasts.scss
@@ -130,6 +130,8 @@
         display: flex;
         flex-direction: column;
         flex: auto;
+        justify-content: space-between;
+        height: 100%;
     }
 
     &__podcast-content {
@@ -140,7 +142,6 @@
         justify-content: flex-start;
         width: 100%;
         padding: 24px 0 24px 30px;
-        border-bottom: 1px solid $light-color;
     }
 
     &__podcast-play {
@@ -170,6 +171,7 @@
     }
 
     &__podcast-title {
+        max-width: 200px;
         margin: 0;
         margin-bottom: 4px;
         color: $project-black;
@@ -181,6 +183,7 @@
     }
 
     &__podcast-author {
+        max-width: 200px;
         margin: 0;
         color: $text-gray;
         font-family: 'Muller';
@@ -193,8 +196,10 @@
     &__podcast-stats {
         display: flex;
         flex-direction: row;
-        flex: auto;
+        // flex: auto;
         padding: 8px 0 8px 30px;
+        border-top: 1px solid $light-color;
+
     }
 
     &__podcast-text {
@@ -248,6 +253,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        max-width: 250px;
         margin-left: auto;
         margin-right: auto;
         padding: 23px 54px;
